--- a/src/model2/BeginUnpackingProcess.fxml
+++ b/src/model2/BeginUnpackingProcess.fxml
@@ -4,9 +4,10 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" fx:id="main" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="model2.BeginUnpackingProcessController">
+<AnchorPane id="AnchorPane" fx:id="main" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.BeginUnpackingProcessController">
     <children>
         <MenuBar prefHeight="600.0" prefWidth="1200.0" VBox.vgrow="NEVER">
       <menus>
@@ -31,5 +32,7 @@
         </Menu>
       </menus>
     </MenuBar>
+      <TilePane prefHeight="600.0" prefWidth="220.0" />
+      <TilePane prefHeight="600.0" prefWidth="220.0" />
     </children>
 </AnchorPane>
