--- a/src/model2/intialization_1.fxml
+++ b/src/model2/intialization_1.fxml
@@ -18,10 +18,10 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Vbox" prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
-   <VBox prefHeight="600.0" prefWidth="1200.0">
+<AnchorPane fx:id="Vbox" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
+   <VBox prefWidth="1280.0">
     <children>
-    <MenuBar VBox.vgrow="NEVER">
+    <MenuBar prefWidth="1280.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
                   <items>
@@ -44,7 +44,7 @@
         </Menu>
       </menus>
     </MenuBar>
-<AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="50.0" prefWidth="1200.0">
+<AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefWidth="1280.0">
   <children>
     <Label alignment="CENTER" layoutX="14.0" prefHeight="60.0" prefWidth="125.0" style="&#10;" text="Subsystem" textAlignment="CENTER" wrapText="false">
                <font>
@@ -58,12 +58,12 @@
 <TextField fx:id="APID" layoutX="568.0" layoutY="18.0" prefHeight="25.0" prefWidth="95.0" />
             <Label layoutX="225.0" layoutY="22.0" text="Subsystem" />
             <ComboBox fx:id="Subsystem" layoutX="311.0" layoutY="18.0" prefWidth="150.0" />
-               <Button fx:id="SaveForSubsystem" layoutX="726.0" layoutY="18.0" mnemonicParsing="false" onAction="#SaveForSubsystem" text="Save" />
+               <Button fx:id="SaveForSubsystem" layoutX="745.0" layoutY="13.0" mnemonicParsing="false" onAction="#SaveSubsystemButtonAction" prefHeight="35.0" prefWidth="87.0" text="Save" />
   </children>
 </AnchorPane>
-    <SplitPane dividerPositions="0.3747913188647746" focusTraversable="true" prefHeight="430.0" prefWidth="1200.0" VBox.vgrow="ALWAYS">
+    <SplitPane dividerPositions="0.29" focusTraversable="true" prefWidth="1280.0" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane prefHeight="513.0" prefWidth="427.0">
+        <AnchorPane layoutY="344.0" prefHeight="627.0" prefWidth="409.0">
           <children>
             <Label alignment="CENTER" layoutX="15.0" layoutY="1.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Sensors" textAlignment="CENTER" wrapText="false">
               <font>
@@ -76,46 +76,40 @@
       <Label layoutX="7.0" layoutY="42.0" text="Sensor Name" />
       <Label layoutX="12.0" layoutY="84.0" text="Sensor Unit" textFill="#0d0d0d" />
       <Label layoutX="16.0" layoutY="175.0" text="Description" textFill="#0d0d0d" />
-      <Label layoutX="268.0" layoutY="42.0" text="Type" />
-      <Label fx:id="ON" disable="true" layoutX="307.0" layoutY="99.0" prefHeight="17.0" prefWidth="23.0" text="ON" />
-      <Label fx:id="OFF" disable="true" layoutX="308.0" layoutY="132.0" text="OFF" />
-      <Label fx:id="Statuss" disable="true" layoutX="306.0" layoutY="184.0" text="Status" />
-      <Label fx:id="Rangee" disable="true" layoutX="83.0" layoutY="383.0" text="Range" />
-      <TextField fx:id="SensorByte" layoutX="92.0" layoutY="256.0" />
-      <TextField fx:id="SensorBits" layoutX="92.0" layoutY="289.0" />
-      <TextField fx:id="SensorOrder" layoutX="92.0" layoutY="322.0" />
-      <Label layoutX="33.0" layoutY="260.0" text="byte" />
-      <Label layoutX="35.0" layoutY="293.0" text="bits" />
-      <Label layoutX="32.0" layoutY="326.0" text="order" />
-       <CheckBox fx:id="Range" layoutX="30.0" layoutY="358.0" mnemonicParsing="false" onMouseClicked="#enableRange" text="Range" />
+      <Label layoutX="30.0" layoutY="327.0" text="Type" />
+      <TextField fx:id="SensorByte" layoutX="92.0" layoutY="225.0" />
+      <TextField fx:id="SensorBits" layoutX="92.0" layoutY="256.0" />
+      <TextField fx:id="SensorOrder" layoutX="92.0" layoutY="289.0" />
+      <Label layoutX="35.0" layoutY="229.0" text="byte" />
+      <Label layoutX="36.0" layoutY="260.0" text="bits" />
+      <Label layoutX="32.0" layoutY="293.0" text="order" />
+       <CheckBox fx:id="Range" layoutX="21.0" layoutY="145.0" mnemonicParsing="false" onMouseClicked="#enableRange" text="Range" />
       <TextField fx:id="SensorName" layoutX="91.0" layoutY="38.0" />
       <TextField fx:id="SensorUnit" layoutX="91.0" layoutY="72.0" />
-      <TextArea fx:id="Description" layoutX="92.0" layoutY="175.0" prefHeight="73.0" prefWidth="149.0" />
-      <TextField fx:id="ONField" disable="true" layoutX="341.0" layoutY="95.0" prefHeight="25.0" prefWidth="79.0" />
-      <TextField fx:id="OFFfiled" disable="true" layoutX="341.0" layoutY="128.0" prefHeight="25.0" prefWidth="79.0" />
-      <TextField fx:id="StatusField" disable="true" layoutX="293.0" layoutY="200.0" prefHeight="25.0" prefWidth="47.0" />
-      <TextField fx:id="EquationField" disable="true" layoutX="322.0" layoutY="301.0" prefHeight="25.0" prefWidth="117.0" />
-       <RadioButton fx:id="OnOff" layoutX="280.0" layoutY="75.0" mnemonicParsing="false" onMouseClicked="#enableONOFF" text="ON-OFF" />
-      <RadioButton fx:id="Equation" layoutX="280.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#enableEquation" prefHeight="17.0" prefWidth="68.0" text="Equation" />
-      <RadioButton fx:id="Status" layoutX="280.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#enableStatus" text="Status" />
-                  <Button layoutX="149.0" layoutY="474.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Preview" />
-      <TextField fx:id="RangeMin" disable="true" layoutX="114.0" layoutY="436.0" prefHeight="25.0" prefWidth="71.0" />
-                     <TextField fx:id="RangeMax" disable="true" layoutX="114.0" layoutY="405.0" prefHeight="25.0" prefWidth="71.0" />
-                     <Label fx:id="MAXRange" disable="true" layoutX="77.0" layoutY="409.0" text="Max" />
-                     <Label fx:id="MINRange" disable="true" layoutX="78.0" layoutY="440.0" text="Min" />
-                     <Label layoutX="29.0" layoutY="108.0" text="Format" />
-                     <TextField fx:id="StatusField1" disable="true" layoutX="346.0" layoutY="200.0" prefHeight="25.0" prefWidth="47.0" />
-                     <TextField fx:id="EQuStatusField1" disable="true" layoutX="323.0" layoutY="366.0" prefHeight="25.0" prefWidth="57.0" />
-                     <TextField fx:id="EQuStatusField2" disable="true" layoutX="385.0" layoutY="366.0" prefHeight="25.0" prefWidth="57.0" />
-                     <Button fx:id="ADD1" disable="true" layoutX="379.0" layoutY="225.0" mnemonicParsing="false" onAction="#ADDstatus" prefHeight="25.0" prefWidth="47.0" text="ADD" />
-                     <Button fx:id="ADD2" disable="true" layoutX="387.0" layoutY="397.0" mnemonicParsing="false" onAction="#ADDEQUstatus" prefHeight="25.0" prefWidth="47.0" text="ADD" />
-                     <RadioButton fx:id="EQuNormal" disable="true" layoutX="313.0" layoutY="273.0" mnemonicParsing="false" onMouseClicked="#enableEquationNormal" text="Norml" />
-                     <RadioButton fx:id="EQuStatus" disable="true" layoutX="313.0" layoutY="335.0" mnemonicParsing="false" onMouseClicked="#enableEquationStatus" text="EQuStatus" />
+      <TextArea fx:id="Description" layoutX="92.0" layoutY="175.0" prefHeight="47.0" prefWidth="149.0" />
+      <TextField fx:id="ONField" disable="true" layoutX="137.0" layoutY="354.0" prefHeight="25.0" prefWidth="47.0" promptText="ON" />
+      <TextField fx:id="OFFfiled" disable="true" layoutX="193.0" layoutY="354.0" prefHeight="25.0" prefWidth="47.0" promptText="OFF" />
+      <TextField fx:id="StatusField" disable="true" layoutX="137.0" layoutY="397.0" prefHeight="25.0" prefWidth="47.0" promptText="Num" />
+      <TextField fx:id="EquationField" disable="true" layoutX="212.0" layoutY="439.0" prefHeight="25.0" prefWidth="95.0" />
+       <RadioButton fx:id="OnOff" layoutX="46.0" layoutY="358.0" mnemonicParsing="false" onMouseClicked="#enableONOFF" text="ON-OFF" />
+      <RadioButton fx:id="Equation" layoutX="46.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#enableEquation" prefHeight="17.0" prefWidth="68.0" text="Equation" />
+      <RadioButton fx:id="Status" layoutX="46.0" layoutY="401.0" mnemonicParsing="false" onMouseClicked="#enableStatus" text="Status" />
+                  <Button layoutX="97.0" layoutY="551.0" mnemonicParsing="false" onAction="#PutIntoTable" prefHeight="25.0" prefWidth="149.0" text="Preview" />
+      <TextField fx:id="RangeMin" disable="true" layoutX="177.0" layoutY="141.0" prefHeight="25.0" prefWidth="71.0" promptText="Min" />
+                     <TextField fx:id="RangeMax" disable="true" layoutX="94.0" layoutY="141.0" prefHeight="25.0" prefWidth="71.0" promptText="Max" />
+                     <Label layoutX="24.0" layoutY="112.0" text="Format" />
+                     <TextField fx:id="StatusField1" disable="true" layoutX="193.0" layoutY="397.0" prefHeight="25.0" prefWidth="68.0" promptText="Vakue" />
+                     <TextField fx:id="EQuStatusField1" disable="true" layoutX="216.0" layoutY="474.0" prefHeight="25.0" prefWidth="38.0" />
+                     <TextField fx:id="EQuStatusField2" disable="true" layoutX="183.0" layoutY="506.0" prefHeight="25.0" prefWidth="68.0" />
+                     <Button fx:id="ADD1" disable="true" layoutX="268.0" layoutY="397.0" mnemonicParsing="false" onAction="#ADDstatus" prefHeight="25.0" prefWidth="47.0" text="ADD" />
+                     <Button fx:id="ADD2" disable="true" layoutX="262.0" layoutY="506.0" mnemonicParsing="false" onAction="#ADDEQUstatus" prefHeight="25.0" prefWidth="47.0" style="-fx-background-color: #ffff;" text="ADD" />
+                     <RadioButton fx:id="EQuNormal" disable="true" layoutX="133.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#enableEquationNormal" text="Norml" />
+                     <RadioButton fx:id="EQuStatus" disable="true" layoutX="133.0" layoutY="478.0" mnemonicParsing="false" onMouseClicked="#enableEquationStatus" text="EQuStatus" />
                      <RadioButton fx:id="positiveFormat" layoutX="99.0" layoutY="112.0" mnemonicParsing="false" text="+" />
-                     <RadioButton fx:id="NegativeFormat" layoutX="101.0" layoutY="141.0" mnemonicParsing="false" text="-" />
+                     <RadioButton fx:id="NegativeFormat" layoutX="152.0" layoutY="112.0" mnemonicParsing="false" text="-" />
           </children>
         </AnchorPane>
-        <AnchorPane prefHeight="514.0" prefWidth="851.0">
+        <AnchorPane prefHeight="634.0" prefWidth="863.0" SplitPane.resizableWithParent="false">
           <children>
             <Label alignment="CENTER" layoutX="14.0" layoutY="1.0" style="&#10;" text="View" textAlignment="CENTER" wrapText="false">
                      <font>
@@ -125,42 +119,50 @@
                         <Color blue="0.624" green="0.624" red="0.624" fx:id="x8" />
                      </textFill>
                   </Label>
-               <TableView fx:id="TableView" layoutX="12.0" layoutY="40.0" prefHeight="416.0" prefWidth="834.0">
+               <TableView fx:id="TableView" layoutX="12.0" layoutY="32.0" prefHeight="484.0" prefWidth="877.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="15.0">
         <columns>
-                        <TableColumn fx:id="SubsystemCol" prefWidth="73.0" text="Subsystem" />
-            <TableColumn fx:id="SensorCol" editable="false" prefWidth="60.0" text="Sensor" />
-          <TableColumn fx:id="UnitCol" prefWidth="43.0" text="Unit" />
-            <TableColumn fx:id="MinCol" prefWidth="61.0" text="Min" />
-            <TableColumn fx:id="MaxCol" prefWidth="58.0" text="Max" />
-            <TableColumn prefWidth="406.0" text="Type">
+                        <TableColumn fx:id="SubsystemCol" prefWidth="68.0" text="Subsystem" />
+            <TableColumn fx:id="SensorCol" editable="false" prefWidth="43.0" text="Sensor" />
+          <TableColumn fx:id="UnitCol" prefWidth="48.0" text="Unit" />
+                           <TableColumn fx:id="FormatCol" prefWidth="51.0" text="Format" />
+                           <TableColumn fx:id="BitCol" prefWidth="49.0" text="Bit" />
+                           <TableColumn fx:id="ByteCol" prefWidth="58.0" text="Byte" />
+                           <TableColumn fx:id="OrderCol" prefWidth="52.0" text="Oreder" />
+                           <TableColumn prefWidth="63.0" text="Range">
+                              <columns>
+                  <TableColumn fx:id="MaxCol" prefWidth="40.0" text="Max" />
+                  <TableColumn fx:id="MinCol" prefWidth="36.0" text="Min" />
+                              </columns>
+                           </TableColumn>
+            <TableColumn prefWidth="350.0" text="Type">
                <columns>
-                  <TableColumn prefWidth="75.0" text="ON-OFF">
+                  <TableColumn prefWidth="72.0" text="ON-OFF">
                      <columns>
-                        <TableColumn fx:id="ONCol" prefWidth="49.0" text="ON" />
-                        <TableColumn fx:id="OFFCol" prefWidth="43.0" text="OFF" />
+                        <TableColumn fx:id="ONCol" prefWidth="40.0" text="ON" />
+                        <TableColumn fx:id="OFFCol" prefWidth="38.0" text="OFF" />
                      </columns>
                   </TableColumn>
-                  <TableColumn prefWidth="87.0" text="Status">
+                  <TableColumn prefWidth="133.0" text="Status">
                                     <columns>
                                        <TableColumn fx:id="StatusNumCol" prefWidth="54.0" text="Num" />
                                        <TableColumn fx:id="StatusValueCol" prefWidth="59.0" text="Value" />
                                     </columns></TableColumn>
-                  <TableColumn prefWidth="280.0" text="Equation">
+                  <TableColumn prefWidth="149.0" text="Equation">
                      <columns>
-                        <TableColumn fx:id="EquationCol" prefWidth="67.0" text="Equation" />
-                        <TableColumn prefWidth="54.0" text="Range">
+                        <TableColumn fx:id="EquationCol" prefWidth="58.0" text="Equation" />
+                        <TableColumn prefWidth="129.0" text="Range">
                                           <columns>
                                              <TableColumn fx:id="RangeNum" prefWidth="39.0" text="Num" />
-                                             <TableColumn fx:id="RangeValue" prefWidth="81.0" text="Value" />
+                                             <TableColumn fx:id="RangeValue" prefWidth="40.0" text="Value" />
                                           </columns></TableColumn>
                      </columns>
                   </TableColumn>
                </columns>
             </TableColumn>
-            <TableColumn fx:id="Description" prefWidth="178.0" text="Description" />
+                           <TableColumn fx:id="DescriptionCol" prefWidth="118.0" text="Description" />
         </columns>
       </TableView>
-                  <Button layoutX="500.0" layoutY="469.0" mnemonicParsing="false" text="Save" />
+                  <Button layoutX="677.0" layoutY="535.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="117.0" text="Save" />
           </children>
         </AnchorPane>
       </items>
