--- a/src/model2/BeginUnpackingProcess.fxml
+++ b/src/model2/BeginUnpackingProcess.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" fx:id="main" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.BeginUnpackingProcessController">
+<AnchorPane id="AnchorPane" fx:id="main" prefHeight="721.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.BeginUnpackingProcessController">
     <children>
-        <MenuBar prefHeight="600.0" prefWidth="1200.0" VBox.vgrow="NEVER">
+        <MenuBar prefHeight="29.0" prefWidth="1195.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
                   <items>
@@ -32,7 +32,11 @@
         </Menu>
       </menus>
     </MenuBar>
-      <TilePane prefHeight="600.0" prefWidth="220.0" />
+      <AnchorPane layoutY="38.0" prefHeight="620.0" prefWidth="220.0">
+         <children>
+            <TilePane fx:id="loadPane1" prefHeight="620.0" prefWidth="220.0" />
+         </children>
+      </AnchorPane>
       <TilePane prefHeight="600.0" prefWidth="220.0" />
     </children>
 </AnchorPane>
