--- a/src/model2/intialization_1.fxml
+++ b/src/model2/intialization_1.fxml
@@ -18,8 +18,8 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Vbox" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
-   <VBox prefWidth="1280.0">
+<AnchorPane fx:id="Vbox" maxHeight="700.0" maxWidth="1280.0" minHeight="700.0" minWidth="1280.0" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
+   <VBox maxHeight="700.0" maxWidth="1280.0" minHeight="698.0" minWidth="1280.0" prefHeight="700.0" prefWidth="1280.0">
     <children>
     <MenuBar prefWidth="1280.0" VBox.vgrow="NEVER">
       <menus>
@@ -162,7 +162,7 @@
                            <TableColumn fx:id="DescriptionCol" prefWidth="118.0" text="Description" />
         </columns>
       </TableView>
-                  <Button layoutX="677.0" layoutY="535.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="117.0" text="Save" />
+                  <Button layoutX="677.0" layoutY="535.0" mnemonicParsing="false" onAction="#SaveIntoDB" prefHeight="27.0" prefWidth="117.0" text="Save" />
           </children>
         </AnchorPane>
       </items>
