--- a/src/model2/BeginUnpackingProcess.fxml
+++ b/src/model2/BeginUnpackingProcess.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="main" prefHeight="721.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.BeginUnpackingProcessController">
     <children>
-        <MenuBar prefHeight="29.0" prefWidth="1195.0" VBox.vgrow="NEVER">
+        <MenuBar prefHeight="29.0" prefWidth="1280.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
                   <items>
@@ -32,11 +34,39 @@
         </Menu>
       </menus>
     </MenuBar>
-      <AnchorPane layoutY="38.0" prefHeight="620.0" prefWidth="220.0">
+      <AnchorPane layoutY="27.0" prefHeight="693.0" prefWidth="1280.0" style="-fx-background-color: #000000;">
          <children>
-            <TilePane fx:id="loadPane1" prefHeight="620.0" prefWidth="220.0" />
+            <TilePane fx:id="loadPane14" layoutX="14.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="OBCTile" layoutX="525.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane12" layoutX="779.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane11" layoutX="1036.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane1" layoutX="274.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <Label alignment="CENTER" layoutX="243.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Power Subsystem" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="1050.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Communication Subsystem" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="791.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Antena (AntS)" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="525.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Radio Board (RF)" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="6.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Sensor" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
-      <TilePane prefHeight="600.0" prefWidth="220.0" />
     </children>
 </AnchorPane>
