--- a/src/model2/UpdateFilesDistination.fxml
+++ b/src/model2/UpdateFilesDistination.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="284.0" prefWidth="417.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="model2.UpdateFilesDistinationController">
+<AnchorPane id="AnchorPane" prefHeight="284.0" prefWidth="417.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.UpdateFilesDistinationController">
    <children>
       <Label layoutX="27.0" layoutY="32.0" prefHeight="20.0" prefWidth="80.0" text="Live Mode">
          <font>
@@ -21,8 +20,8 @@
       </Label>
       <Button layoutX="293.0" layoutY="62.0" mnemonicParsing="false" onAction="#buttom1" prefHeight="25.0" prefWidth="55.0" text="Browse" />
       <Button layoutX="293.0" layoutY="173.0" mnemonicParsing="false" onAction="#buttom2" text="Browse" />
-      <Button layoutX="355.0" layoutY="62.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="55.0" text="Save" />
-      <Button layoutX="355.0" layoutY="173.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="55.0" text="Save" />
+      <Button layoutX="355.0" layoutY="62.0" mnemonicParsing="false" onAction="#saveLiveFilePath" prefHeight="25.0" prefWidth="55.0" text="Save" />
+      <Button layoutX="355.0" layoutY="173.0" mnemonicParsing="false" onAction="#saveOfflineFilePath" prefHeight="25.0" prefWidth="55.0" text="Save" />
       <ListView fx:id="listView" layoutX="26.0" layoutY="62.0" prefHeight="25.0" prefWidth="246.0" />
       <ListView fx:id="listView2" layoutX="25.0" layoutY="173.0" prefHeight="25.0" prefWidth="246.0" />
    </children>
