--- a/src/model2/initialization_1.fxml
+++ b/src/model2/initialization_1.fxml
@@ -18,33 +18,18 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Vbox" maxHeight="700.0" maxWidth="1280.0" minHeight="700.0" minWidth="1280.0" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
-   <VBox maxHeight="700.0" maxWidth="1280.0" minHeight="698.0" minWidth="1280.0" prefHeight="700.0" prefWidth="1280.0">
+<AnchorPane fx:id="Vbox" prefHeight="700.0" prefWidth="1351.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.InitializeWindowController">
+   <VBox maxHeight="700.0" maxWidth="1351.0" minHeight="698.0" minWidth="1280.0" prefHeight="700.0" prefWidth="1351.0">
     <children>
-    <MenuBar prefWidth="1280.0" VBox.vgrow="NEVER">
+    <MenuBar prefHeight="25.0" prefWidth="1318.0" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
                   <items>
                      <MenuItem mnemonicParsing="false" onAction="#loadHome" text="Go TO Home" />
                   </items></Menu>
-        <Menu mnemonicParsing="false" text="Begin unpacking ">
-          <items>
-          
-          </items>
-        </Menu>
-            <Menu mnemonicParsing="false" text="Charts">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-              </items>
-            </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
-          </items>
-        </Menu>
       </menus>
     </MenuBar>
-<AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefWidth="1280.0">
+<AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="60.0" prefWidth="1331.0">
   <children>
     <Label alignment="CENTER" layoutX="14.0" prefHeight="60.0" prefWidth="125.0" style="&#10;" text="Subsystem" textAlignment="CENTER" wrapText="false">
                <font>
