--- a/src/model2/ShowDesignedTabs.fxml
+++ b/src/model2/ShowDesignedTabs.fxml
@@ -3,23 +3,45 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="700.0" prefWidth="1351.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.ShowDesignedTabsController">
-   <TableView fx:id="tableView" layoutX="1124.0" layoutY="44.0" prefHeight="503.0" prefWidth="200.0">
+    <MenuBar prefHeight="29.0" prefWidth="1351.0" style="-fx-background-color: #72f7fc;" VBox.vgrow="NEVER">
+      <menus>
+        <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
+                  <items>
+                     <MenuItem mnemonicParsing="false" onAction="#loadHome" text="Go TO Home" />
+                  </items></Menu>
+      </menus>
+      <effect>
+         <Lighting>
+            <bumpInput>
+               <Shadow />
+            </bumpInput>
+            <light>
+               <Light.Distant />
+            </light>
+         </Lighting>
+      </effect>
+    </MenuBar>
+    <TableView fx:id="tableView" layoutX="1124.0" layoutY="44.0" prefHeight="591.0" prefWidth="200.0">
      <columns>
        <TableColumn fx:id="nameCol" prefWidth="199.0" text="Name" />
      </columns>
    </TableView>
-     <MenuBar prefHeight="25.0" prefWidth="1351.0" VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" onAction="#loadHome" text="Home" />
-      </menus>
-    </MenuBar>
-   <Button layoutX="1124.0" layoutY="564.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Show" />
+
+   <Button layoutX="1124.0" layoutY="649.0" mnemonicParsing="false" onAction="#loadHome" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: #010b17;" text="Show" textFill="#72f7fc">
+      <font>
+         <Font size="18.0" />
+      </font></Button>
    <TilePane layoutX="47.0" layoutY="53.0" prefHeight="517.0" prefWidth="883.0" />
 </AnchorPane>
