--- a/src/model2/BeginUnpackingProcess.fxml
+++ b/src/model2/BeginUnpackingProcess.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,42 +14,72 @@
 
 <AnchorPane id="AnchorPane" fx:id="main" prefHeight="721.0" prefWidth="1351.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.BeginUnpackingProcessController">
     <children>
-        <MenuBar prefHeight="29.0" prefWidth="1351.0" VBox.vgrow="NEVER">
+        <MenuBar prefHeight="29.0" prefWidth="1351.0" style="-fx-background-color: #72f7fc;" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
                   <items>
                      <MenuItem mnemonicParsing="false" onAction="#loadHome" text="Go TO Home" />
                   </items></Menu>
+            <Menu mnemonicParsing="false" text="Begin Unpacking Process">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+              </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Charts">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+              </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Initialization">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Design New Tab">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
       </menus>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect>
     </MenuBar>
-      <AnchorPane layoutY="28.0" prefHeight="692.0" prefWidth="1351.0" style="-fx-background-color: #000000;">
+      <AnchorPane layoutY="28.0" prefHeight="692.0" prefWidth="1351.0" style="-fx-background-color: #010b17;">
          <children>
-            <TilePane fx:id="loadPane14" layoutX="14.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
-            <TilePane fx:id="OBCTile" layoutX="580.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
-            <TilePane fx:id="loadPane12" layoutX="847.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
-            <TilePane fx:id="loadPane11" layoutX="1107.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
-            <TilePane fx:id="loadPane1" layoutX="295.0" layoutY="67.0" prefHeight="586.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
-            <Label alignment="CENTER" layoutX="288.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Power Subsystem" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+            <TilePane fx:id="loadPane14" layoutX="14.0" layoutY="40.0" prefHeight="622.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="OBCTile" layoutX="580.0" layoutY="40.0" prefHeight="622.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane12" layoutX="841.0" layoutY="41.0" prefHeight="622.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane11" layoutX="1107.0" layoutY="41.0" prefHeight="622.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <TilePane fx:id="loadPane1" layoutX="295.0" layoutY="41.0" prefHeight="622.0" prefWidth="230.0" style="-fx-background-color: #ffffff;" />
+            <Label alignment="CENTER" layoutX="287.0" layoutY="7.0" prefHeight="40.0" prefWidth="218.0" text="Power Subsystem" textAlignment="CENTER" textFill="#72f7fc" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1113.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Communication Subsystem" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+            <Label alignment="CENTER" layoutX="1113.0" layoutY="7.0" prefHeight="40.0" prefWidth="218.0" text="Communication Subsystem" textAlignment="CENTER" textFill="#72f7fc" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="827.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Antena (AntS)" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+            <Label alignment="CENTER" layoutX="841.0" layoutY="7.0" prefHeight="40.0" prefWidth="218.0" text="Antena (AntS)" textAlignment="CENTER" textFill="#72f7fc" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="525.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Radio Board (RF)" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+            <Label alignment="CENTER" layoutX="580.0" layoutY="7.0" prefHeight="40.0" prefWidth="218.0" text="Radio Board (RF)" textAlignment="CENTER" textFill="#72f7fc" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="6.0" layoutY="27.0" prefHeight="40.0" prefWidth="218.0" text="Sensor" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+            <Label alignment="CENTER" layoutX="7.0" layoutY="7.0" prefHeight="40.0" prefWidth="218.0" text="Sensor" textAlignment="CENTER" textFill="#72f7fc" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font size="16.0" />
                </font>
