--- a/src/model2/Charts.fxml
+++ b/src/model2/Charts.fxml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="700.0" prefWidth="1351.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model2.ChartsController">
-     <MenuBar prefHeight="25.0" prefWidth="1351.0" VBox.vgrow="NEVER">
+     <MenuBar prefHeight="29.0" prefWidth="1351.0" style="-fx-background-color: #72f7fc;" VBox.vgrow="NEVER">
       <menus>
-        <Menu mnemonicParsing="false" onAction="#loadHome" text="Home" />
+        <Menu mnemonicParsing="false" onAction="#loadHome" onShowing="#loadHome" text="Home">
+                  <items>
+                     <MenuItem mnemonicParsing="false" onAction="#loadHome" text="Go TO Home" />
+                  </items></Menu>
       </menus>
+      <effect>
+         <Lighting>
+            <bumpInput>
+               <Shadow />
+            </bumpInput>
+            <light>
+               <Light.Distant />
+            </light>
+         </Lighting>
+      </effect>
     </MenuBar>
-   <LineChart layoutX="14.0" layoutY="33.0" prefHeight="561.0" prefWidth="1016.0">
+   <LineChart layoutX="14.0" layoutY="33.0" prefHeight="628.0" prefWidth="1016.0">
      <xAxis>
        <CategoryAxis side="BOTTOM" />
      </xAxis>
@@ -23,5 +44,13 @@
        <NumberAxis side="LEFT" />
      </yAxis>
    </LineChart>
-   <ComboBox layoutX="1167.0" layoutY="59.0" prefWidth="150.0" promptText="Sensor Name" />
+   <ComboBox layoutX="1147.0" layoutY="59.0" prefHeight="25.0" prefWidth="170.0" promptText="Sensor Name" />
+   <JFXDatePicker layoutX="1147.0" layoutY="232.0" promptText="Day" />
+   <Button layoutX="1147.0" layoutY="303.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="171.0" style="-fx-background-color: #000e1b;" text="Show" textFill="#72f7fc">
+      <font>
+         <Font size="18.0" />
+      </font>
+   </Button>
+   <JFXTimePicker layoutX="1146.0" layoutY="170.0" promptText="End time" />
+   <JFXTimePicker layoutX="1147.0" layoutY="105.0" promptText="Start time" />
 </AnchorPane>
